// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders in disabled state 1`] = `
<div
  aria-label="Loading"
  class="styled__Wrapper-sc-1pom3vg-0 PSvRx"
  disabled=""
  role="status"
  size="16"
/>
`;

exports[`Loading renders with contrast color 1`] = `
<div
  aria-label="Loading"
  class="styled__Wrapper-sc-1pom3vg-0 hNvEqb"
  role="status"
  size="16"
/>
`;

exports[`Loading renders with custom size 1`] = `
<div
  aria-label="Loading"
  class="styled__Wrapper-sc-1pom3vg-0 fRtoGJ"
  role="status"
  size="32"
/>
`;

exports[`Loading renders with default props 1`] = `
<div
  aria-label="Loading"
  class="styled__Wrapper-sc-1pom3vg-0 gAabnp"
  role="status"
  size="16"
/>
`;

exports[`Loading renders with multiple custom props 1`] = `
<div
  aria-label="Loading"
  class="styled__Wrapper-sc-1pom3vg-0 gZJleH"
  disabled=""
  role="status"
  size="40"
/>
`;

exports[`Loading renders with secondary color 1`] = `
<div
  aria-label="Loading"
  class="styled__Wrapper-sc-1pom3vg-0 cgtggP"
  role="status"
  size="16"
/>
`;
